--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link href="css/serverless-webrtc-bootstrap.css" rel="stylesheet">
 </head>
 <body>
-<a href="https://github.com/cjb/serverless-webrtc/"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
 <div class="span4">
   <Video id="localVideo">
 </div>
@@ -26,7 +25,7 @@
     <div class="text-info" id="chatlog" style="height:350px; overflow:auto;">
     </div>
   </fieldset>
-  <form class="form-inline" onSubmit="return sendMessage()" action="">
+  <form id="sendMessageForm" class="form-inline">
     <input type="text" id="messageTextBox" placeholder="Type your message here">
     <button type="submit" id="sendMessageBtn" class="btn">Send message</button>
   </form>
